syntax = "proto3";
//包名
package api;
//go 包
option go_package = "./api";

service GrpcHelper {
  // 获取服务列表
  rpc ListService(ListServiceRequest) returns (ListServiceReply);
  // 执行
  rpc Invoke(InvokeRequest) returns (InvokeReply);
  rpc RefreshService(RefreshServiceRequest) returns (RefreshServiceReply);
  rpc Test(TestMessage) returns (TestMessage);
}

message RefreshServiceRequest {
  string address = 1;
}

message RefreshServiceReply {

}

message InvokeRequest {
  string address = 1;
  string service = 2;
  string method = 3;
  string json_params = 4;
}

message InvokeReply {
  string json_response = 1;
}

message ListServiceRequest {
  string address = 1;
}
message ListServiceReply {
  repeated ServiceItem data = 1;

  message ServiceItem {
    string service_name = 1;
    repeated string method_name = 2;
  }
}

message TestMessage {
  uint32 uint32_field = 2;
  uint64 uint64_field = 3;
  int32 int32_field = 4;
  int64 int64_field = 5;
  bool bool_field = 6;
  string string_field = 7;
  repeated string repeated_string_field = 12;
  bytes bytes_field = 8;
  repeated TestMessage repeated_field = 9;
  map<string, TestMessage> map_field = 10;
  map<string, string> map_string_field = 13;
  enum DynamicEnum {
    ZERO = 0;
    ONE = 1;
    TWO = 2;
  }
  DynamicEnum enum_field = 11;
  Nested nested = 14;
  message Nested {
    string nested_field = 1;
  }
}